--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ phases:
   pre_build:
     commands:
       # Log in to Amazon ECR
-      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 433337163311.dkr.ecr.us-east-1.amazonaws.com
+      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin <Account-ID>.dkr.ecr.us-east-1.amazonaws.com
       
   build:
     commands:
@@ -14,8 +14,8 @@ phases:
   post_build:
     commands:
       # Push the Docker image to Amazon ECR
-      - docker tag ecsflaskapp 433337163311.dkr.ecr.us-east-1.amazonaws.com/ecs-flaskapp:latest
-      - docker push 433337163311.dkr.ecr.us-east-1.amazonaws.com/ecs-flaskapp:latest
+      - docker tag ecsflaskapp <Account-ID>.dkr.ecr.us-east-1.amazonaws.com/ecs-flaskapp:latest
+      - docker push <Account-ID>.dkr.ecr.us-east-1.amazonaws.com/ecs-flaskapp:latest
       - aws ecs update-service --cluster ECS-Cluster-FlaskApp --service ECS-Service --force-new-deployment
 
 artifacts:
